Modified templates to display posts from database.

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Beep Beep Lettuce!</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -10,8 +10,19 @@
     <body>
        <body>
     <div class="page-header">
-        <h1><a href="/">Django Girls Blog</a></h1>
+        <h1><a href="/">Beep Beep Lettuce!</a></h1>
     </div>
+    <p>Hi there!</p>
+        <p>It works!</p>
+        <h2>Congrats on...</h2>
+        <ul><li>Making a site!</li><li>The cool coding jazz!</li><li>And suffering through saving code for 5 hours so far!<ul><ul>
+        <p>I'm very proud of you! You get a gold star!</p>
+        <a href="https://rlv.zcache.com/custom_message_gold_star_with_gold_glitter_texture_star_sticker-r8c6018b4e6f64bd4b7386ba858eb00be_v9w09_8byvr_324.jpg">link</a>
+        <h3>Now be prepared</h3>
+        <p>Because there's still 2 and a half hours to go! So buckle up buttercup and enjoy the rest of your flight!</p>
+        <br>
+        <br>
+        <br>
     <div class="content container">
         <div class="row">
             <div class="col-md-8">
